# GraphConvolutionalNetworks

./: CMakeLists.txt  README.md
scripts/: download_datasets.sh
scripts/plotting/: plot_time.py
scripts/plotting/max_memory/: max_memory.json  plot_max_memory.py
scripts/plotting/time_per_epoch/: times.json
src/: CMakeLists.txt
src/functions/: activations.cu  activations.h  loss.cu  loss.h
src/graphes/: graph.cu  graph.h  nn.h
src/initializer/: random_normal.h
src/layers/: Dense.h  graph_conv.h  network.h
src/linAlg/: matrix.cu  matrix.h  random.cu  random.h
src/linearAlg/: matrix.h  tensor.h
src/optimization/: gradient_descent.h
tests/: CMakeLists.txt  citeseer.cu  citeseer_3layer.cu  network.cu  pubmed.cu  test.cu  unit.cu
